Implemented train-test split

--- a/MNB_Model.ipynb
+++ b/MNB_Model.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -37,7 +38,9 @@
    "outputs": [],
    "source": [
     "filename = \"\\path\\to\\data\"\n",
-    "data_set = pd.read_csv(filename, delimeter=',')"
+    "data_set = pd.read_csv(filename, delimeter=',')\n",
+    "y=data_set['sentiment'].values\n",
+    "X=data_set['review'].values"
    ]
   },
   {
@@ -52,7 +55,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=0)\n",
+    "\n",
+    "print(X_train.shape, y_train.shape, X_test.shape, y_test.shape)\n",
+    "print(X_train[0])\n",
+    "print(y_train[0])\n",
+    "print(X_test[0])\n",
+    "print(y_test[0])"
+   ]
   }
  ],
  "metadata": {
